# tokenspeed

./: README.md
.github/workflows/: pr-test-amd.yml  pr-test-nvidia-arm.yml  pr-test-nvidia.yml  release-tokenspeed-kernel.yml  update-tokenspeed-kernel-flashinfer.yml
docker/: Dockerfile.nvidia
docs/recipes/: models.md
docs/serving/: deepseek-v4.md
python/tokenspeed/: env.py
test/: runners.py
test/ci/: README.md
test/ci_system/: cleanup_amd_gpu_state.sh  install_deps.sh  pd_http_worker.py  serve_qwen35_397b_nvfp4_pd_1p1d.sh  test_flashinfer_jit_cache.py
test/cli/: test_serve_smg_unit.py
test/runtime/: test_control_server.py  test_deepseek_v4_config.py  test_dp_sampling_routing_metadata.py  test_drafter_accept_indexing.py  test_flat_cudagraph_per_group.py  test_flat_scheduler_config_guard.py  test_fp8_linear_mxfp8_flashinfer.py  test_http_server.py  test_mxfp4_weights.py  (+11 more)
tokenspeed-mla/: pyproject.toml
tokenspeed-scheduler/: pyproject.toml
tokenspeed-scheduler/bindings/: python_module.cpp
tokenspeed-scheduler/csrc/fsm/: forward_events.h
tokenspeed-scheduler/csrc/resource/allocator/: paged_cache_group.cpp  paged_cache_group.h
tokenspeed-scheduler/csrc/resource/hybrid_prefix_cache/: hybrid_prefix_cache.cpp  hybrid_prefix_cache.h
tokenspeed-scheduler/csrc/scheduler/: outside_event_handler.cpp  scheduler.cpp  types.h
tokenspeed-scheduler/csrc/scheduler/operations/: forward.cpp
tokenspeed-scheduler/python/tests/: test_paged_cache_group_admission.py
tokenspeed-scheduler/tests/cpp/: test_paged_cache_eviction.cpp  test_paged_cache_replay.cpp
(+167 files in other folders)
