[build-system]
requires = [
    "scikit-build-core>=0.9.5",
    "nanobind>=2.13.0",
    "tokenspeed-spdlog==1.15.1",
    "cmake>=3.22",
    "ninja>=1.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "tokenspeed-scheduler"
version = "0.1.3"
description = "TokenSpeed C++ scheduler with Python bindings"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[tool.scikit-build]
build-dir = "build"
cmake.version = ">=3.22"
cmake.args = ["-DTOKENSPEED_SCHEDULER_BUILD_TESTS=OFF", "-DTOKENSPEED_SCHEDULER_BUILD_PYTHON=ON"]
wheel.packages = ["python/tokenspeed_scheduler"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
